# SummarizationBackend

Summarization_App/Summary_generator/: .dockerkeep  .gitignore  Dockerfile  config.py  generate_test_token.py  jwt_handler.py  local_test.py  pyproject.toml  requirements.txt  summarize_api.py  test_lambda.py
Summarization_App/Summary_generator/Summary_engine/: classification.py  prompts.py  summarization_var.py  utilities.py
Summarization_App/Summary_generator/preprocessing/: content_preprocessing.py  prompt_count.py
Summarization_App/Summary_generator/tests/: test_summarization_var.py
