[tool.poetry]
name = "classification-engine"
version = "2"
description = ""
authors = ["Yashwantha Simha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
openpyxl = "^3.1.2"
tiktoken = "^0.5.1"
xlsxwriter = "^3.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
